# pretalx-integration

./: .pre-commit-config.yaml  README.md  nanoc-export.md
devroom-settings/: MANIFEST.in  Makefile  pyproject.toml
devroom-settings/.github/workflows/: style.yml
devroom-settings/devroom_settings/: apps.py  forms.py  models.py  nanoc.py  signals.py  urls.py  views.py
devroom-settings/devroom_settings/management/commands/: bulk_team_import.py  create_teams.py  export_devroom_managers.py  export_resources.py  import_pw.py  import_room_allocation.py  import_tracks.py  merge_users.py  release.py  speaker_mail.py
devroom-settings/devroom_settings/migrations/: 0001_initial.py  0002_delete_trackmanager.py  0002_tracksettings_devroom_managers_and_more.py  0002_tracksettings_manager_team_and_more.py  0002_tracksettings_rooms.py  0003_delete_trackmanager.py  0003_tracksettings_track_type_alter_tracksettings_cfp_url_and_more.py  0004_roomsettings.py  0005_usersettings.py  0006_remove_usersettings_visible_usersettings_matrix_id.py  0007_delete_usersettings.py  0008_fosdemfeedback.py  0008_user_matrix_id.py  0009_fosdemfeedback_timestamp_alter_fosdemfeedback_table.py  0010_roomsettings_control_password.py  0010_roomsettings_control_password_1_and_more.py  0011_alter_roomsettings_control_password_and_more.py  0012_remove_tracksettings_rooms_trackroom.py
devroom-settings/devroom_settings/templates/: check.html  speaker_mail.html
meeting_notes/: 2023-03-25.md
pretalx-fringe/: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml
pretalx-fringe/.github/workflows/: style.yml
pretalx-fringe/pretalx_fringe/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
pretalx-fringe/pretalx_fringe/migrations/: 0001_initial.py  0002_alter_fringeactivity_ends_and_more.py  0003_fringeactivity_sort_order.py
pretalx-fringe/pretalx_fringe/templates/: activity.html  fringe_list.html
(+72 files in other folders)
