[project]
name = "pretalx-fringe"
dynamic = ["version"]
description = "Submit fringe events on pretalx"
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Johan Van de Wauw", email = "johanvdw@fosdem.org"},
]
maintainers = [
  {name = "Johan Van de Wauw", email = "johanvdw@fosdem.org"},
]

dependencies = []

[project.urls]
homepage = "https://github.com/johanvdw/pretalx-fringe"
repository = "https://github.com/johanvdw/pretalx-fringe.git"

[project.entry-points."pretalx.plugin"]
pretalx_fringe = "pretalx_fringe:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_fringe.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]
